# MASt3R-SLAM-ROCm

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  setup.py
mast3r_slam/: dataloader.py
mast3r_slam/backend/src/: gn_kernels.cu  matching_kernels.cu
