[build-system]
requires = [
    "wheel",
    "setuptools==80.9.0",
    "numpy", 
    "torch"
]
build-backend = "setuptools.build_meta"

[project]
name = "MAST3R-SLAM"
version = "0.0.1"
dynamic = ["dependencies"]
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["mast3r_slam"]
namespaces = false
